--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ django-ndarray==0.0.3
 
 # Django
 # ------------------------------------------------------------------------------
-django==3.0.11  # pyup: < 3.1  # https://www.djangoproject.com/
+django==3  # pyup: < 3.1  # https://www.djangoproject.com/
 django-environ==0.4.5  # https://github.com/joke2k/django-environ
 django-model-utils==4.1.1  # https://github.com/jazzband/django-model-utils
 django-allauth==0.44.0  # https://github.com/pennersr/django-allauth
@@ -22,3 +22,6 @@ django-extensions==3.1.0  # https://github.com/django-extensions/django-extensio
 gunicorn==20.0.4  # https://github.com/benoitc/gunicorn
 psycopg2==2.8.6  # https://github.com/psycopg/psycopg2
 Collectfast==2.2.0  # https://github.com/antonagestam/collectfast
+
+django-s3-sqlite
+whitenoise
