--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,13 @@ on:
         - domi/**
         - Pipfile*
         - zappa_settings.json
+  pull_request:
+    branches:
+      - main
+    paths:
+      - domi/**
+      - Pipfile*
+      - zappa_settings.json
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
