--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ hiredis==1.1.0  # https://github.com/redis/hiredis-py
 -e git://github.com/lfalvarez/proposals-core.git#egg=dj_proposals_candidates
 python_graphql_client
 django-ndarray==0.0.3
+django-extensions
+django-autoslug
 
 
 # Django
