--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,13 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ $default-branch ]
     paths:
         - domi/**
         - Pipfile*
         - zappa_settings.json
   pull_request:
-    branches:
-      - main
+    branches: [ $default-branch ]
     paths:
       - domi/**
       - Pipfile*
