--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,12 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        sudo apt-get install git
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Cache pipenv virtualenv
