--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,9 +20,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: Install git
+      run: sudo apt-get install git
     - name: Install dependencies
       run: |
-        sudo apt-get install git
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Cache pipenv virtualenv
