--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,4 +44,4 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
     - name: Zappa Deploy
-      uses: josephbmanley/zappa-deploy-action@v0.1.1
+      run: zappa update --all
