--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -4,7 +4,11 @@
         "project_name": "medianaranja-web",
         "runtime": "python3.8",
         "s3_bucket": "medianaranja-antp",
-	"aws_region": "sa-east-1",
-	"use_precompiled_packages": false
+        "aws_region": "sa-east-1",
+        "use_precompiled_packages": false,
+        "events": [{
+             "function": "load_from_api.get_from_api",
+             "expressions": ["cron(0 8 * * *)"]
+         }]
     }
 }
