--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pipenv
+    - name: Cache pipenv virtualenv
+      id: cache-pipenv
+      uses: actions/cache@v1
+      with:
+        path: ~/.local/share/virtualenvs
+        key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
     - name: Install dependencies
+      if: steps.cache-pipenv.outputs.cache-hit != 'true'
       run: pipenv install
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -34,5 +41,4 @@ jobs:
         aws-region: sa-east-1
     - name: Zappa Deploy
       run: |
-        pipenv run zappa manage dev migrate
         pipenv run zappa update --all
