--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,3 +42,4 @@ jobs:
     - name: Zappa Deploy
       run: |
         pipenv run zappa update --all
+        pipenv run zappa manage dev "collectstatic --noinput"
