--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -5,7 +5,8 @@
         "runtime": "python3.8",
         "s3_bucket": "medianaranja-antp",
         "aws_region": "sa-east-1",
-        "use_precompiled_packages": false,
-        "exclude": ["*.gz", "*.rar", "./mn_juego/static/"]
+        "use_precompiled_packages": true,
+        "slim_handler": true,
+        "exclude": ["*.gz", "*.rar", "*.csv", "*.db", "mn_juego/static/"]
     }
 }
