--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
         path: ~/.local/share/virtualenvs
         key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
     - name: Install dependencies
-      if: steps.cache-pipenv.outputs.cache-hit != 'true'
+      #if: steps.cache-pipenv.outputs.cache-hit != 'true'
       run: pipenv install
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
