--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,9 @@ django-s3-sqlite = "*"
 whitenoise = "*"
 Django = "==3"
 Collectfast = "==2.2.0"
+google-api-python-client = "*"
+google-auth-httplib2 = "*"
+google-auth-oauthlib = "*"
 
 [dev-packages]
 
