--- a/.github/workflows/actualizar_compromisos.yml
+++ b/.github/workflows/actualizar_compromisos.yml
@@ -24,6 +24,7 @@ jobs:
       if: steps.cache-pipenv.outputs.cache-hit != 'true'
       run: |
         pipenv install
+        pipenv install --dev
     - name: Actualizar
       env:
         TOKEN: ${{ secrets.TOKEN }}
