Intentando subir la DB a s3

--- a/.github/workflows/actualizar_compromisos.yml
+++ b/.github/workflows/actualizar_compromisos.yml
@@ -34,7 +34,16 @@ jobs:
     - name: Hacer un commit y subir
       uses: EndBug/add-and-commit@v7
       with:
-        author_name: Your Name
-        author_email: mail@example.com
+        author_name: La máquina
+        author_email: maquina@ahoranostocaparticipar.org
         message: 'Actualizando la BD'
         add: 'sqlite.db'
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: sa-east-1
+    - name: "Subir la bd a s3"
+      run: |
+        aws s3 cp sqlite.db s3://medianaranja-antp
