Quitando el que sea guardado en un archivo el resultado

--- a/.github/workflows/actualizar_compromisos.yml
+++ b/.github/workflows/actualizar_compromisos.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         echo $TOKEN >> token.json
         echo $CREDS >> credentials.json
-        pipenv run python manage.py leer_spreadsheet >> resultado.txt
+        pipenv run python manage.py leer_spreadsheet
     - name: Hacer un commit y subir
       uses: EndBug/add-and-commit@v7
       with:
