Enviando el mail con el resultado

--- a/.github/workflows/actualizar_compromisos.yml
+++ b/.github/workflows/actualizar_compromisos.yml
@@ -29,6 +29,10 @@ jobs:
       env:
         TOKEN: ${{ secrets.TOKEN }}
         CREDS: ${{ secrets.CREDS }}
+        EMAIL_HOST:  ${{secrets.EMAIL_HOST}}
+        EMAIL_HOST_USER:  ${{secrets.EMAIL_HOST_USER}}
+        EMAIL_HOST_PASSWORD:  ${{secrets.EMAIL_HOST_PASSWORD}}
+        DEFAULT_FROM_EMAIL: ${{secrets.DEFAULT_FROM_EMAIL}}
       run: |
         echo $TOKEN >> token.json
         echo $CREDS >> credentials.json
