Testeando nuevo yml

--- a/.github/workflows/actualizar_compromisos.yml
+++ b/.github/workflows/actualizar_compromisos.yml
@@ -1,8 +1,8 @@
 name: Actualizar compromisos
 on:
-  - workflow_dispatch
   schedule:
       - cron: "5 8-19 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
