--- a/.github/workflows/actualizar_compromisos.yml
+++ b/.github/workflows/actualizar_compromisos.yml
@@ -36,6 +36,7 @@ jobs:
         EMAIL_HOST_USER:  ${{secrets.EMAIL_HOST_USER}}
         EMAIL_HOST_PASSWORD:  ${{secrets.EMAIL_HOST_PASSWORD}}
         DEFAULT_FROM_EMAIL: ${{secrets.DEFAULT_FROM_EMAIL}}
+        A_QUIEN_SE_LE_VA_ELMAIL: ${{secrets.A_QUIEN_SE_LE_VA_ELMAIL}}
       run: |
         echo $TOKEN >> token.json
         echo $CREDS >> credentials.json
