--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ django-s3-sqlite = "*"
 whitenoise = "*"
 Django = "==3"
 Collectfast = "==2.2.0"
+django-heroku = "*"
 
 [dev-packages]
 google-api-python-client = "*"
